--- a/src/app/app-layout/about/about-story/about-story.component.html
+++ b/src/app/app-layout/about/about-story/about-story.component.html
@@ -12,10 +12,10 @@
           <div class="col-lg-6 col-xl-3 mb-5 mb-xl-0 wow fadeInUp" data-wow-delay="0.1s">
               <div class="country-item">
                   <div class="rounded overflow-hidden">
-                      <img src="assets/images/country-1.jpg" class="img-fluid w-100 rounded" alt="Image">
+                      <img src="assets/images/travel/country-1.jpg" class="img-fluid w-100 rounded" alt="Image">
                   </div>
                   <div class="country-flag">
-                      <img src="assets/images/brazil.jpg" class="img-fluid rounded-circle" alt="Image">
+                      <img src="assets/images/travel/brazil.jpg" class="img-fluid rounded-circle" alt="Image">
                   </div>
                   <div class="country-name">
                       <a href="#" class="text-white fs-4">Brazil</a>
@@ -25,10 +25,10 @@
           <div class="col-lg-6 col-xl-3 mb-5 mb-xl-0 wow fadeInUp" data-wow-delay="0.3s">
               <div class="country-item">
                   <div class="rounded overflow-hidden">
-                      <img src="assets/images/country-2.jpg" class="img-fluid w-100 rounded" alt="Image">
+                      <img src="assets/images/travel/country-2.jpg" class="img-fluid w-100 rounded" alt="Image">
                   </div>
                   <div class="country-flag">
-                      <img src="assets/images/india.jpg" class="img-fluid rounded-circle" alt="Image">
+                      <img src="assets/images/travel/india.jpg" class="img-fluid rounded-circle" alt="Image">
                   </div>
                   <div class="country-name">
                       <a href="#" class="text-white fs-4">Ấn Độ</a>
@@ -38,10 +38,10 @@
           <div class="col-lg-6 col-xl-3 mb-5 mb-xl-0 wow fadeInUp" data-wow-delay="0.5s">
               <div class="country-item">
                   <div class="rounded overflow-hidden">
-                      <img src="assets/images/country-3.jpg" class="img-fluid w-100 rounded" alt="Image">
+                      <img src="assets/images/travel/country-3.jpg" class="img-fluid w-100 rounded" alt="Image">
                   </div>
                   <div class="country-flag">
-                      <img src="assets/images/usa.jpg" class="img-fluid rounded-circle" alt="Image">
+                      <img src="assets/images/travel/usa.jpg" class="img-fluid rounded-circle" alt="Image">
                   </div>
                   <div class="country-name">
                       <a href="#" class="text-white fs-4">New York</a>
@@ -51,10 +51,10 @@
           <div class="col-lg-6 col-xl-3 mb-5 mb-xl-0 wow fadeInUp" data-wow-delay="0.7s">
               <div class="country-item">
                   <div class="rounded overflow-hidden">
-                      <img src="assets/images/country-4.jpg" class="img-fluid w-100 rounded" alt="Image">
+                      <img src="assets/images/travel/country-4.jpg" class="img-fluid w-100 rounded" alt="Image">
                   </div>
                   <div class="country-flag">
-                      <img src="assets/images/italy.jpg" class="img-fluid rounded-circle" alt="Image">
+                      <img src="assets/images/travel/italy.jpg" class="img-fluid rounded-circle" alt="Image">
                   </div>
                   <div class="country-name">
                       <a href="#" class="text-white fs-4">Ý</a>
@@ -148,7 +148,7 @@
           <div class="col-lg-6 col-lg-6 col-xl-3 wow fadeInUp" data-wow-delay="0.1s">
               <div class="training-item">
                   <div class="training-inner">
-                      <img src="assets/images/training-1.jpg" class="img-fluid w-100 rounded" alt="Image">
+                      <img src="assets/images/travel/training-1.jpg" class="img-fluid w-100 rounded" alt="Image">
                       <div class="training-title-name">
                           <a href="#" class="h4 text-white mb-0">IELTS</a>
                           <a href="#" class="h4 text-white mb-0">Đào Tạo</a>
@@ -164,7 +164,7 @@
           <div class="col-lg-6 col-lg-6 col-xl-3 wow fadeInUp" data-wow-delay="0.3s">
               <div class="training-item">
                   <div class="training-inner">
-                      <img src="assets/images/training-2.jpg" class="img-fluid w-100 rounded" alt="Image">
+                      <img src="assets/images/travel/training-2.jpg" class="img-fluid w-100 rounded" alt="Image">
                       <div class="training-title-name">
                           <a href="#" class="h4 text-white mb-0">TOEFL</a>
                           <a href="#" class="h4 text-white mb-0">Đào Tạo</a>
@@ -180,7 +180,7 @@
           <div class="col-lg-6 col-lg-6 col-xl-3 wow fadeInUp" data-wow-delay="0.5s">
               <div class="training-item">
                   <div class="training-inner">
-                      <img src="assets/images/training-3.jpg" class="img-fluid w-100 rounded" alt="Image">
+                      <img src="assets/images/travel/training-3.jpg" class="img-fluid w-100 rounded" alt="Image">
                       <div class="training-title-name">
                           <a href="#" class="h4 text-white mb-0">PTE</a>
                           <a href="#" class="h4 text-white mb-0">Đào Tạo</a>
@@ -196,7 +196,7 @@
           <div class="col-lg-6 col-lg-6 col-xl-3 wow fadeInUp" data-wow-delay="0.7s">
               <div class="training-item">
                   <div class="training-inner">
-                      <img src="assets/images/training-4.jpg" class="img-fluid w-100 rounded" alt="Image">
+                      <img src="assets/images/travel/training-4.jpg" class="img-fluid w-100 rounded" alt="Image">
                       <div class="training-title-name">
                           <a href="#" class="h4 text-white mb-0">OET</a>
                           <a href="#" class="h4 text-white mb-0">Đào Tạo</a>
