--- a/src/app/app-layout/about/contact/contact.component.html
+++ b/src/app/app-layout/about/contact/contact.component.html
@@ -174,7 +174,7 @@
               <div class="col-12 pt-5 wow zoomIn" data-wow-delay="0.1s">
                   <div class="rounded h-100">
                       <iframe class="rounded w-100"
-                      style="height: 500px;" src="https://www.google.com/maps/embed?pb=!1m18!1m12!1m3!1d387191.33750346623!2d-73.97968099999999!3d40.6974881!2m3!1f0!2f0!3f0!3m2!1i1024!2i768!4f13.1!3m3!1m2!1s0x89c24fa5d33f083b%3A0xc80b8f06e177fe62!2sNew%20York%2C%20NY%2C%20USA!5e0!3m2!1sen!2sbd!4v1694259649153!5m2!1sen!2sbd"
+                      style="height: 500px;" src="https://www.google.com/maps/embed?pb=!1m23!1m12!1m3!1d18361.812210120253!2d106.69717607759851!3d10.787508593653644!2m3!1f0!2f0!3f0!3m2!1i1024!2i768!4f13.1!4m8!3e6!4m5!1s0x317529b9efa32261%3A0xa73afccb261e29ee!2zS2FsaXZpc2EgJiBUb3VycywgxJDGsOG7nW5nIE5ndXnhu4VuIELhu4luaCBLaGnDqm0sIERhIEthbywgRGlzdHJpY3QgMSwgSG8gQ2hpIE1pbmggQ2l0eQ!3m2!1d10.7890753!2d106.702648!4m0!5e1!3m2!1sen!2s!4v1737735230010!5m2!1sen!2s"
                       loading="lazy" referrerpolicy="no-referrer-when-downgrade"></iframe>
                   </div>
               </div>
