--- a/src/app/app-layout/footer/footer.component.html
+++ b/src/app/app-layout/footer/footer.component.html
@@ -5,13 +5,13 @@
           <div class="col-md-6 col-lg-6 col-xl-3">
               <div class="footer-item d-flex flex-column">
                   <h4 class="text-secondary mb-4">Thông tin liên hệ</h4>
-                  <a href=""><i class="fa fa-map-marker-alt me-2"></i> 123 Đường ABC, Hà Nội, Việt Nam</a>
-                  <a href=""><i class="fas fa-envelope me-2"></i> info@visaexample.com</a>
-                  <a href=""><i class="fas fa-phone me-2"></i> +012 345 6789</a>
-                  <a href="" class="mb-3"><i class="fas fa-print me-2"></i> +012 345 6789</a>
+                  <a href=""><i class="fa fa-map-marker-alt me-2"></i> 29/12 Nguyễn Bỉnh Khiêm Phường Đa Kao, Quận 1, TP Hồ Chí Minh, Việt Nam</a>
+                  <a href=""><i class="fas fa-envelope me-2"></i> jessie.le@kalivisa.com</a>
+                  <a href=""><i class="fas fa-phone me-2"></i>0938 594 111</a>
+                  <a href="" class="mb-3"><i class="fas fa-print me-2"></i>0938 594 111</a>
                   <div class="d-flex align-items-center">
                       <i class="fas fa-share fa-2x text-secondary me-2"></i>
-                      <a class="btn mx-1" href=""><i class="fab fa-facebook-f"></i></a>
+                      <a class="btn mx-1" href="https://www.facebook.com/profile.php?id=61555422686184"><i class="fab fa-facebook-f"></i></a>
                       <a class="btn mx-1" href=""><i class="fab fa-twitter"></i></a>
                       <a class="btn mx-1" href=""><i class="fab fa-instagram"></i></a>
                       <a class="btn mx-1" href=""><i class="fab fa-linkedin-in"></i></a>
@@ -25,11 +25,11 @@
                   <h4 class="text-secondary mb-4">Giờ làm việc</h4>
                   <div class="mb-3">
                       <h6 class="text-muted mb-0">Thứ Hai - Thứ Sáu:</h6>
-                      <p class="text-white mb-0">09:00 sáng đến 07:00 tối</p>
+                      <p class="text-white mb-0">08:00 sáng đến 05:30 tối</p>
                   </div>
                   <div class="mb-3">
                       <h6 class="text-muted mb-0">Thứ Bảy:</h6>
-                      <p class="text-white mb-0">10:00 sáng đến 05:00 chiều</p>
+                      <p class="text-white mb-0">08:00 sáng đến 12:00 trưa</p>
                   </div>
                   <div class="mb-3">
                       <h6 class="text-muted mb-0">Ngày nghỉ:</h6>
