--- a/src/app/app-layout/header/header.component.html
+++ b/src/app/app-layout/header/header.component.html
@@ -3,15 +3,15 @@
   <div class="row gx-0 align-items-center">
     <div class="col-lg-5 text-center text-lg-start mb-lg-0">
       <div class="d-flex">
-        <a href="#" class="text-muted me-4"><i class="fas fa-envelope text-secondary me-2"></i>Example@gmail.com</a>
-        <a href="#" class="text-muted me-0"><i class="fas fa-phone-alt text-secondary me-2"></i>+01234567890</a>
+        <a href="#" class="text-muted me-4"><i class="fas fa-envelope text-secondary me-2"></i>jessie.le@kalivisa.com</a>
+        <a href="#" class="text-muted me-0"><i class="fas fa-phone-alt text-secondary me-2"></i>0938594111</a>
       </div>
     </div>
     <div class="col-lg-3 row-cols-1 text-center mb-2 mb-lg-0">
       <div class="d-inline-flex align-items-center" style="height: 45px;">
         <a class="btn btn-sm btn-outline-light btn-square rounded-circle me-2" href=""><i
             class="fab fa-twitter fw-normal text-secondary"></i></a>
-        <a class="btn btn-sm btn-outline-light btn-square rounded-circle me-2" href=""><i
+        <a class="btn btn-sm btn-outline-light btn-square rounded-circle me-2" href="https://www.facebook.com/profile.php?id=61555422686184"><i
             class="fab fa-facebook-f fw-normal text-secondary"></i></a>
         <a class="btn btn-sm btn-outline-light btn-square rounded-circle me-2" href=""><i
             class="fab fa-linkedin-in fw-normal text-secondary"></i></a>
@@ -23,9 +23,8 @@
     </div>
     <div class="col-lg-4 text-center text-lg-end">
       <div class="d-inline-flex align-items-center" style="height: 45px;">
-        <a href="#" class="text-muted me-2"routerLink="/login"> Login</a><small> </small>
-        <a href="#" class="text-muted mx-2"> Support</a><small> / </small>
-        <a href="#" class="text-muted ms-2"> Contact</a>
+        <a href="#" class="text-muted me-2"routerLink="/login" *ngIf="!isLogin"> Login</a><small> </small>
+        <a href="#" class="text-muted me-2" (click) = "logOut()" *ngIf="isLogin"> Logout</a><small> </small>
       </div>
     </div>
   </div>
@@ -58,7 +57,7 @@
             <!-- Nếu menu có cấp con -->
             <ng-template #dropdownMenu>
               <div class="nav-item dropdown">
-                <a href="#" class="nav-link dropdown-toggle" data-bs-toggle="dropdown">
+                <a href="#" class="nav-link dropdown-toggle" data-bs-toggle="dropdown" (click)="preventDefault($event)">
                   {{ menu.label }}
                 </a>
                 <div class="dropdown-menu m-0">
@@ -92,53 +91,53 @@
 <div class="mobile-menu-container mobile-menu-light">
   <div class="mobile-menu-wrapper">
 
-    <span class="mobile-menu-close" (click)="closeMobileMenu()"><i class="icon-close"></i></span>
-    <!-- Mobile Search -->
-    <form action="#" method="get" class="mobile-search">
-      <label for="mobile-search" class="sr-only">Search</label>
-      <input type="search" class="form-control" name="mobile-search" id="mobile-search"
-        placeholder="Tìm kiếm dịch vụ..." required>
-      <button class="btn btn-primary" type="submit"><i class="icon-search"></i></button>
-    </form>
+    <span class="mobile-menu-close" (click)="closeMobileMenu()">
+      <i class="fas fa-times"></i> <!-- Icon Close từ FontAwesome -->
+    </span>
 
     <!-- Mobile Menu Tabs -->
     <ul class="nav nav-pills-mobile nav-border-anim" role="tablist">
-      <li class="nav-item">
-        <a class="nav-link active" id="mobile-menu-link" data-toggle="tab" href="#mobile-menu-tab" role="tab"
-          aria-controls="mobile-menu-tab" aria-selected="true">Menu</a>
+      <li class="nav-item" *ngIf="!isLogin">
+        <a class="nav-link" [routerLink]="['/login']">
+          <i class="fas fa-sign-in-alt"></i> <!-- Icon Login -->
+          <span>Login</span>
+        </a>
       </li>
-      <li class="nav-item">
-        <a class="nav-link" id="mobile-cats-link" data-toggle="tab" href="#mobile-cats-tab" role="tab"
-          aria-controls="mobile-cats-tab" aria-selected="false">Categories</a>
+    
+      <!-- Icon Logout -->
+      <li class="nav-item" *ngIf="isLogin">
+        <a class="nav-link" (click)="logOut()">
+          <i class="fas fa-sign-out-alt"></i> <!-- Icon Logout -->
+          <span>Logout</span>
+        </a>
       </li>
+      
     </ul>
 
-    <!-- Mobile Menu Content -->
     <div class="tab-content">
       <div class="tab-pane fade show active" id="mobile-menu-tab" role="tabpanel" aria-labelledby="mobile-menu-link">
         <nav class="mobile-nav">
           <ul class="mobile-menu">
             <ng-container *ngFor="let menu of menus">
               <ng-container *ngIf="menu.kind != 'mt'">
-                <li>
-                  <a [routerLink]="menu.route ? [menu.route] : []" class="sf-with-ul" (click)="onMenuClick(menu)">
+                <li #menuItem>
+                  <a [routerLink]="menu.route ? [menu.route] : []" class="sf-with-ul" (click)="toggleMenu(menuItem ,menu)">
                     {{ menu.label }}
                   </a>
                   <!-- Hiển thị cấp 2 -->
                   <ul *ngIf="menu.items?.length">
-                    <li *ngFor="let item of menu.items">
+                    <li *ngFor="let item of menu.items" #subMenuItem>
                       <a [routerLink]="item.route ? [item.route] : []" class="sf-with-ul" (click)="onMenuClick(item)">
                         {{ item.label }}
                       </a>
                       <!-- Hiển thị cấp 3 -->
-                      <ul *ngIf="item.items?.length">
+                      <!-- <ul *ngIf="item.items?.length">
                         <li *ngFor="let subItem of item.items">
-                          <a [routerLink]="subItem.route ? [subItem.route] : []" class="sf-with-ul"
-                            (click)="onMenuClick(subItem)">
+                          <a [routerLink]="subItem.route ? [subItem.route] : []"   class="sf-with-ul">
                             {{ subItem.label }}
                           </a>
                         </li>
-                      </ul>
+                      </ul> -->
                     </li>
                   </ul>
                 </li>
@@ -147,11 +146,11 @@
           </ul>
         </nav>
       </div>
-    </div><!-- End .tab-content -->
+    </div>
 
     <!-- Social Icons -->
     <div class="social-icons">
-      <a href="#" class="social-icon" target="_blank" title="Facebook"><i class="icon-facebook-f"></i></a>
+      <a href="https://www.facebook.com/profile.php?id=61555422686184" class="social-icon" target="_blank" title="Facebook"><i class="icon-facebook-f"></i></a>
       <a href="#" class="social-icon" target="_blank" title="Twitter"><i class="icon-twitter"></i></a>
       <a href="#" class="social-icon" target="_blank" title="Instagram"><i class="icon-instagram"></i></a>
       <a href="#" class="social-icon" target="_blank" title="Youtube"><i class="icon-youtube"></i></a>
@@ -159,23 +158,3 @@
   </div><!-- End .mobile-menu-wrapper -->
 </div>
 <!-- End Mobile Menu -->
-
-<!-- Search Modal -->
-<div class="modal fade" id="searchModal" tabindex="-1" aria-labelledby="searchModalLabel" aria-hidden="true">
-  <div class="modal-dialog modal-dialog-centered">
-    <div class="modal-content">
-      <div class="modal-header">
-        <h5 class="modal-title" id="searchModalLabel">Tìm kiếm dịch vụ</h5>
-        <button type="button" class="btn-close" data-bs-dismiss="modal" aria-label="Close"></button>
-      </div>
-      <div class="modal-body">
-        <form action="#" method="get">
-          <div class="input-group">
-            <input type="search" class="form-control" placeholder="Nhập từ khóa..." required>
-            <button class="btn btn-primary" type="submit"><i class="fas fa-search"></i></button>
-          </div>
-        </form>
-      </div>
-    </div>
-  </div>
-</div>
