--- a/src/app/app-layout/login/login-page/login-page.component.html
+++ b/src/app/app-layout/login/login-page/login-page.component.html
@@ -4,7 +4,7 @@
           <img src="../../../../assets/images/logo.png" alt="Logo">
       </div>
 
-      <h2 class="welcome-text">Welcome Back!</h2>
+      <h2 class="welcome-text">WELCOME KALIVISA</h2>
 
       <form method="POST">
           <div class="form-group">
