--- a/src/app/app-layout/login/register-member/register-member.component.css
+++ b/src/app/app-layout/login/register-member/register-member.component.css
@@ -1,7 +1,7 @@
 .containershop {
   width: 100%;
   padding: 20px;
-  background: linear-gradient(120deg, #e0c3fc 0%, #8ec5fc 100%);
+  background: linear-gradient(120deg, RGB(19, 74, 134) 0%, #8ec5fc 100%);
   min-height: 100vh;
   display: flex;
   align-items: center;
@@ -45,7 +45,7 @@
   align-items: center;
   justify-content: center;
   text-align: center;
-  background: linear-gradient(120deg, #e0c3fc 0%, #8ec5fc 100%);
+  background: linear-gradient(120deg, RGB(19, 74, 134) 0%, #8ec5fc 100%);
   padding: 2rem;
   border-radius: 15px;
   color: white;
@@ -128,7 +128,7 @@
   padding: 1rem;
   border: none;
   border-radius: 10px;
-  background: linear-gradient(120deg, #e0c3fc 0%, #8ec5fc 100%);
+  background: linear-gradient(120deg, RGB(19, 74, 134) 0%, #8ec5fc 100%);
   color: white;
   font-size: 1.1rem;
   font-weight: 600;
