--- a/src/app/app-layout/about/contact/contact.component.html
+++ b/src/app/app-layout/about/contact/contact.component.html
@@ -6,12 +6,11 @@
                   <h5 class="sub-title text-primary pe-3">Liên Hệ Nhanh</h5>
               </div>
               <h1 class="display-5 mb-4">Có Câu Hỏi? Đừng Ngần Ngại Liên Hệ Với Chúng Tôi</h1>
-              <p class="mb-5">Lorem ipsum dolor sit amet, consectetur adipisicing elit. Quaerat totam deserunt tempora. Tempore neque necessitatibus corporis error earum sint quae?</p>
               <div class="d-flex border-bottom mb-4 pb-4">
                   <i class="fas fa-map-marked-alt fa-4x text-primary bg-light p-3 rounded"></i>
                   <div class="ps-3">
                       <h5>Địa Chỉ</h5>
-                      <p>123, Tầng 1, 123 Đường Roots Terrace, Los Angeles 90010, Hoa Kỳ.</p>
+                      <p>29/12 Nguyễn Bỉnh Khiêm Phường Đa Kao, Quận 1, TP Hồ Chí Minh, Việt Nam</p>
                   </div>
               </div>
               <div class="row g-3">
@@ -22,11 +21,11 @@
                               <h5 class="mb-3">Liên Hệ Nhanh</h5>
                               <div class="mb-3">
                                   <h6 class="mb-0">Điện Thoại:</h6>
-                                  <a href="#" class="fs-5 text-primary">+012 3456 7890</a>
+                                  <a href="#" class="fs-5 text-primary">0938 594 111</a>
                               </div>
                               <div class="mb-3">
                                   <h6 class="mb-0">Email:</h6>
-                                  <a href="#" class="fs-5 text-primary">travisa@example.com</a>
+                                  <a href="#" class="fs-5 text-primary">jessie.le@kalivisa.com</a>
                               </div>
                           </div>
                       </div>
@@ -38,11 +37,11 @@
                               <h5 class="mb-3">Giờ Làm Việc</h5>
                               <div class="mb-3">
                                   <h6 class="mb-0">Thứ Hai - Thứ Sáu:</h6>
-                                  <a href="#" class="fs-5 text-primary">09:00 sáng đến 07:00 tối</a>
+                                  <a href="#" class="fs-5 text-primary">08:00 sáng đến 17:30 tối</a>
                               </div>
                               <div class="mb-3">
                                   <h6 class="mb-0">Thứ Bảy:</h6>
-                                  <a href="#" class="fs-5 text-primary">10:00 sáng đến 05:00 chiều</a>
+                                  <a href="#" class="fs-5 text-primary">08:00 sáng đến 12:00 trưa</a>
                               </div>
                           </div>
                       </div>
@@ -111,74 +110,14 @@
           </div>
       </div>
       <div class="office pt-5">
-          <div class="section-title text-center mb-5 wow fadeInUp" data-wow-delay="0.1s">
-              <div class="sub-style">
-                  <h5 class="sub-title text-primary px-3">Văn Phòng Toàn Cầu</h5>
-              </div>
-              <h1 class="display-5 mb-4">Khám Phá Văn Phòng Của Chúng Tôi Trên Toàn Thế Giới</h1>
-              <p class="mb-0">Lorem ipsum dolor sit amet consectetur adipisicing elit. Quaerat deleniti amet at atque sequi quibusdam cumque itaque repudiandae temporibus, eius nam mollitia voluptas maxime veniam necessitatibus saepe in ab? Repellat!</p>
-          </div>
-          <div class="row g-4 justify-content-center">
-              <div class="col-md-6 col-lg-6 col-xl-3 wow fadeInUp" data-wow-delay="0.1s">
-                  <div class="office-item p-4">
-                      <div class="office-img mb-4">
-                          <img src="assets/images/office-2.jpg" class="img-fluid w-100 rounded" alt="">
-                      </div>
-                      <div class="office-content d-flex flex-column">
-                          <h4 class="mb-2">Úc</h4>
-                          <a href="#" class="text-secondary fs-5 mb-2">+123.456.7890</a>
-                          <a href="#" class="text-muted fs-5 mb-2">travisa@example.com</a>
-                          <p class="mb-0">123, Tầng 1, 123 Đường Roots Terrace, Los Angeles 90010, Hoa Kỳ.</p>
-                      </div>
-                  </div>
-              </div>
-              <div class="col-md-6 col-lg-6 col-xl-3 wow fadeInUp" data-wow-delay="0.3s">
-                  <div class="office-item p-4">
-                      <div class="office-img mb-4">
-                          <img src="assets/images/office-1.jpg" class="img-fluid w-100 rounded" alt="">
-                      </div>
-                      <div class="office-content d-flex flex-column">
-                          <h4 class="mb-2">Canada</h4>
-                          <a href="#" class="text-secondary fs-5 mb-2">(012) 0345 6789</a>
-                          <a href="#" class="text-muted fs-5 mb-2">travisa@example.com</a>
-                          <p class="mb-0">123, Tầng 1, 123 Đường Roots Terrace, Los Angeles 90010, Hoa Kỳ.</p>
-                      </div>
-                  </div>
-              </div>
-              <div class="col-md-6 col-lg-6 col-xl-3 wow fadeInUp" data-wow-delay="0.5s">
-                  <div class="office-item p-4">
-                      <div class="office-img mb-4">
-                          <img src="assets/images/office-3.jpg" class="img-fluid w-100 rounded" alt="">
-                      </div>
-                      <div class="office-content d-flex flex-column">
-                          <h4 class="mb-2">Vương Quốc Anh</h4>
-                          <a href="#" class="text-secondary fs-5 mb-2">01234.567.890</a>
-                          <a href="#" class="text-muted fs-5 mb-2">travisa@example.com</a>
-                          <p class="mb-0">123, Tầng 1, 123 Đường Roots Terrace, Los Angeles 90010, Hoa Kỳ.</p>
-                      </div>
-                  </div>
-              </div>
-              <div class="col-md-6 col-lg-6 col-xl-3 wow fadeInUp" data-wow-delay="0.7s">
-                  <div class="office-item p-4">
-                      <div class="office-img mb-4">
-                          <img src="assets/images/office-4.jpg" class="img-fluid w-100 rounded" alt="">
-                      </div>
-                      <div class="office-content d-flex flex-column">
-                          <h4 class="mb-2">Ấn Độ</h4>
-                          <a href="#" class="text-secondary fs-5 mb-2">+123.45.67890</a>
-                          <a href="#" class="text-muted fs-5 mb-2">travisa@example.com</a>
-                          <p class="mb-0">123, Tầng 1, 123 Đường Roots Terrace, Los Angeles 90010, Hoa Kỳ.</p>
-                      </div>
-                  </div>
-              </div>
-              <div class="col-12 pt-5 wow zoomIn" data-wow-delay="0.1s">
+      <div class="wow fadeInUp" data-wow-delay="0.1s">
+              <div class="pt-5 wow zoomIn" data-wow-delay="0.1s">
                   <div class="rounded h-100">
                       <iframe class="rounded w-100"
                       style="height: 500px;" src="https://www.google.com/maps/embed?pb=!1m23!1m12!1m3!1d18361.812210120253!2d106.69717607759851!3d10.787508593653644!2m3!1f0!2f0!3f0!3m2!1i1024!2i768!4f13.1!4m8!3e6!4m5!1s0x317529b9efa32261%3A0xa73afccb261e29ee!2zS2FsaXZpc2EgJiBUb3VycywgxJDGsOG7nW5nIE5ndXnhu4VuIELhu4luaCBLaGnDqm0sIERhIEthbywgRGlzdHJpY3QgMSwgSG8gQ2hpIE1pbmggQ2l0eQ!3m2!1d10.7890753!2d106.702648!4m0!5e1!3m2!1sen!2s!4v1737735230010!5m2!1sen!2s"
                       loading="lazy" referrerpolicy="no-referrer-when-downgrade"></iframe>
                   </div>
               </div>
-          </div>
       </div>
   </div>
 </div>
