--- a/src/app/components/slider/slider.component.html
+++ b/src/app/components/slider/slider.component.html
@@ -10,7 +10,7 @@
               <div class="text-content">
                 <h1 class="slide-title">{{item.title}}</h1>
                 <p class="slide-description">{{item.description}}</p>
-                <button class="slide-button">{{item.buttonText}}</button>
+                <a class="slide-button"  [href]="item.linkInfo" >Xem chi tiết</a>
               </div>
             </div>
           </div>
