--- a/src/app/app-layout/post/post-detail/post-detail.component.html
+++ b/src/app/app-layout/post/post-detail/post-detail.component.html
@@ -1,12 +1,12 @@
 
-  <div class="container">
+  <div class="container mt-3">
     <article class="entry single-entry entry-fullwidth">
       <div class="row">
         <div class="col-lg-11">
           <div class="entry-body">
-            <h3 class="text-center">
+            <h1 class="text-center">
               {{ blog.title }}
-            </h3>
+            </h1>
           </div>
         </div>
         <div class="col-lg-11 mt-4">
