--- a/src/app/app-layout/post/post-list/post-list.component.html
+++ b/src/app/app-layout/post/post-list/post-list.component.html
@@ -1,25 +1,19 @@
 <div class="row g-4">
-    <!-- Blog Item 1 -->
-    <div data-wow-delay="0.1s" class="col-lg-6 col-xl-3 wow fadeInUp" *ngFor="let blog of blogs">
-      <div class="training-item">
-        <div class="training-inner">
-          <img src="assets/images/travel/training-1.jpg" alt="Blog Image" class="img-fluid w-100 rounded">
-          <div class="training-title-name">
-            <a [routerLink]="['/blog/blog-detail', blog.id]" class="h4 text-white mb-0">{{blog.title}}</a>
-            <p class="h6 text-white mb-0">Tác giả: {{blog.author}}</p>
-          </div>
-        </div>
-        <div class="training-content bg-secondary rounded-bottom p-4">
-          <a [routerLink]="['/blog/blog-detail', blog.id]">
-            <h4 class="text-white">{{blog.author}}</h4>
-          </a>
-          <p class="text-white-50">{{blog.description}}</p>
-          <a [routerLink]="['/blog/blog-detail', blog.id]" class="btn btn-secondary rounded-pill text-white p-0">
-            Xem thêm <i class="fa fa-arrow-right"></i>
-          </a>
+  <div data-wow-delay="0.1s" class="col-lg-6 col-xl-3 wow fadeInUp" *ngFor="let blog of blogs">
+    <div class="training-item">
+      <div class="training-inner">
+        <a [routerLink]="['/blog/blog-detail', blog.id]">
+          <img src="assets/images/travel/training-1.jpg" alt="Blog Image" class="img-fluid w-100 rounded" style="height: 150px; object-fit: cover;">
+        </a>
+        <div class="training-title-name p-2">
+          <a [routerLink]="['/blog/blog-detail', blog.id]" class="h5 text-white mb-0">{{blog.title}}</a>
         </div>
       </div>
+      <div class="training-content bg-secondary rounded-bottom p-3">
+        <p class="text-white-50 mb-2" style="font-size: 0.875rem; line-height: 1.2; height: 3.6em; overflow: hidden;">{{blog.description}}</p>
+      </div>
     </div>
+  </div>
 
-    <app-paging [pageSize]="1" [length]="blogs.length"></app-paging>
+  <app-paging (handelChangePage)="handlePageEvent($event)" [pageSize]="len" [length]="total"></app-paging>
 </div>
